Mon Nov 12 17:21:25 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.inl:
          Fixed win32 compile errors

Mon Nov 12 13:34:35 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Sig_Adapter.cpp:
          Fixed coverity errors

        * ace/Signal.h:
          Doxygen change

Mon Nov 12 12:19:18 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.inl:
          Fixed missing ACE_INLINE

Mon Nov 12 10:45:51 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.h:
        * ace/OS_NS_Thread.inl:
          Added constructor for ACE_event_t to initialize pointers
          explicitly to 0, fixes coverity #743165

        * tests/Bug_4055_Regression_Test.cpp:
          Check return value of clock_settime, fixes coverity #743164

Mon Nov 12 10:06:57 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * docs/Download.html:
        * docs/bczar/bczar.html:
        * etc/index.html:
          Updated for next release

Mon Nov 12 09:34:14 CET 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.1.6 released.

Sun Nov 11 14:26:17 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * tests/Monotonic_Manual_Event_Test.cpp:
        * tests/Monotonic_Message_Queue_Test.cpp:
        * tests/Monotonic_Task_Test.cpp:
          Further narrowing of preprocessor test to prevent running
          test on unsupported platforms.

Sat Nov 10 11:35:57 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * tests/Monotonic_Manual_Event_Test.cpp:
        * tests/Monotonic_Message_Queue_Test.cpp:
        * tests/Monotonic_Task_Test.cpp:
          Further narrowing of preprocessor test to prevent running
          test on unsupported platforms.
          Small logging changes.

Fri Nov  9 10:29:37 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * tests/Monotonic_Manual_Event_Test.cpp: