@@ -32,7 +32,9 @@ ACE_Read_Buffer::dump (void) const
 ACE_Read_Buffer::ACE_Read_Buffer (FILE *fp,
                                   bool close_on_delete,
                                   ACE_Allocator *alloc)
-  : stream_ (fp),
+  : size_ (0),
+    occurrences_ (0),
+    stream_ (fp),
     close_on_delete_ (close_on_delete),
     allocator_ (alloc)
 {
@@ -45,7 +47,9 @@ ACE_Read_Buffer::ACE_Read_Buffer (FILE *fp,
 ACE_Read_Buffer::ACE_Read_Buffer (ACE_HANDLE handle,
                                   bool close_on_delete,
                                   ACE_Allocator *alloc)
-  : stream_ (ACE_OS::fdopen (handle, ACE_TEXT ("r"))),
+  : size_ (0),
+    occurrences_ (0),
+    stream_ (ACE_OS::fdopen (handle, ACE_TEXT ("r"))),
     close_on_delete_ (close_on_delete),
     allocator_ (alloc)
 {
