@@ -1,3 +1,13 @@
+Mon Nov 12 19:26:41 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Malloc.cpp:
+        * ace/Naming_Context.h:
+        * ace/Naming_Context.cpp:
+        * ace/Read_Buffer.cpp:
+        * ace/Recursive_Thread_Mutex.cpp:
+        * ace/SV_Semaphore_Simple.cpp:
+          Coverity fixes
+
 Mon Nov 12 17:21:25 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/OS_NS_Thread.inl:
